...
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:visibility="visible"
        tools:background="@color/common_google_signin_btn_text_light_default"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_above="@id/cancion_pre_guardar">

        <LinearLayout
...
                    android:id="@+id/nueva_cancion_carpeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:backgroundTint="@android:color/transparent"
                    android:elevation="0dp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Título" />

            <EditText
                android:id="@+id/nueva_cancion_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textCapWords" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:text="Autor/Intérprete" />

            <EditText
                android:id="@+id/nueva_cancion_autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Presentación" />

            <EditText
                android:id="@+id/nueva_cancion_presentacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Lista las secciones en el orden correcto."
                android:inputType="textPersonName" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tono original" />

            <EditText
                android:id="@+id/nueva_cancion_tono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TCapo/Transporte" />

            <EditText
                android:id="@+id/nueva_cancion_transporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />
...
