<resources>
    <string name="app_name">AndroidSong</string>
    <string name="title_activity_ancestor">AndroidSong</string>
    <string name="title_activity_principal">AndroidSong</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ErrorGenerico">Error! Acción no ejecutada</string>
    <string name="title_cancionmusico_list">Canciones</string>
...
